# ir-skill

./: .gitignore  CHANGELOG.md  README.md  Research Hub.command  SKILL.md  pyproject.toml  requirements.txt
agents/: openai.yaml
assets/: decision-record-template.md  deep-report-template.md  quick-memo-template.md
docs/: architecture.md  data-layer-overview.md
references/: catalyst-trading.md  data-sources.md  decision-framework.md  deep-research-mode.md  deep-review.md  evidence-data.md  external-evidence-sources.md  factor-model.md  fundamental-research.md  industry-macro.md  investment-modes.md  long-term-trading.md  long-term.md  medium-term-catalyst.md  news-intelligence.md  output-templates.md  persistence.md  portfolio-thesis.md  research-evaluation.md  research-screening.md  short-term-trading.md  technical-screening.md  tushare-data.md  tushare-research.md  webclaw.md  wiki-memory.md
scripts/: curate_research_library.py  factor_screen.py  financial_check.py  fundamental_pool.py  ir_project.py  market_data_migrations.py  market_data_sector.py  market_data_store.py  migrate_research_library.py  news_intake.py  portfolio_context.py  project_context.py  research_collect.py  research_hub_server.py  research_library.py  research_store.py  research_task_state.py  research_watchlist.py  research_workflow.py  short_term_decision.py  short_term_screen.py  technical_indicators.py  technical_screen.py  tushare_config.py  tushare_gateway.py  tushare_mode_data.py  tushare_research.py  tushare_research_data.py  tushare_sector_data.py  tushare_sync.py  validate_skills.py  (+2 more)
(+51 files in other folders)
